vault/bsc/probes/probe_subscript_index_use_after.expected.stderr
<probe>:17:30: error: use of moved value: `p`
    return r + peek(&_Const *p);   // use after move — MUST error if tracked
                             ^
1 error generated.
